public/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;600;700&display=swap');



body {
    padding: 0;
    margin: 0;
    font-family: 'Roboto Mono';
  }
  * {
    box-sizing: border-box;
  }
  h1, h2, h3, h4, h5, h6, p {
    margin: 0;
  }
  html {
    
  }
a{
  text-decoration: none;
  color:white
}
  /* navbar component */
 .main-app{
  height: 100vh;
  width: 100%;
  overflow-y: scroll;
  scroll-behavior: smooth;
  /* border: 1px solid orange; */
  
 }
/* width */
::-webkit-scrollbar {
  width: 7px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #4dba87; 
  /* border-radius: 10px; */
}
 
/* Handle */
::-webkit-scrollbar-thumb {
  background: #5d5f63; 
  border-radius: 15px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #2D2E32; 
}

  .navbar-container{
    position: sticky; 
    /* position: fixed; */
    top:0; 
    left:0;
    /* padding-top: 70px; */
    width: 100%;
    height: 70px;
    background-color: #2D2E32;
    color: #FFFFFF;
    box-shadow: 0 2px 2px #25262a88;
    z-index: 1;
  }
 .logo{
    margin:20px 0 0 10% ;
    width: 130px;
    height: 30px;
    display: inline-block;
  }
  .navbar-container > ul{
    float: right;
    margin: 20px;
    /* margin-top: 2vh; */
    /* margin-left: auto; */
    width: 400px;
    height: 30px;
    list-style: none;
    /* display: inline-block; */
    
   
  }
  .navbar-container .hamberger img{
  display: none;
  }


  .navbar-container > ul li{
    margin: 0 10px;
    display: inline-block;
  }
  .navbar-container ul li:hover{
    color: #4dba87;
  }

  /* header container */

.header-container{
  margin: 0%;
  padding-top: 70px;
  height: 100vh;
  /* box-sizing: border-box; */
  display: flex;
  flex-wrap: wrap;
  /* height: 100vh; */
  width: 100%;
  background-color: #2D2E32;
  /* background-image: url('https://images.unsplash.com/photo-1584949091598-c31daaaa4aa9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
  background-repeat: no-repeat;
  background-position-x: right;
  background-position-y:center */
  /* background-color: #25262A */
}
.header-left{
  margin: 0;
  width: fit-content;
  /* padding-right:20px; */
  /* height:90vh; */
  margin-left: 10vw;
  padding-top: 270px;
  display: inline-block;
  margin-right: auto;
  /* border:1px solid yellow; */

}
.header-btn{
  margin: 0%;
  /* width:200px; */
  width: fit-content;
  /* height: 40%; */
  padding: 7px 15px;
  color: #2D2E32;
  background-color: #4dba87;
  border-radius: 5px;
  font-weight: 600;
  margin-bottom: 5vh;
}
.header-salute{
    color: #4dba87;
}

.header-name{
  margin: 0%;
  font-weight: 400;
  font-size:  50px;
  color:#FFFFFF;
  white-space: nowrap;
  overflow: hidden;
  width: 100%;
  animation: type 4s steps(40,end) forwards;
}

@keyframes type {
  0% {
    width: 0;
  }
  1%, 99%{
    border-right: 2px solid#4dba87;
  }
  100%{
    border-right: none;
    
  }
 
 
}

/* NOTE: I only tested this on Google Chrome.*/




/* .header-left h1{
  white-space: nowrap;
  overflow: hidden;
  width: 100%;
  animation: type 4s steps(100,end) forwards;
} */
 



.social-icons{
  margin-top: 20px;
  animation: fadeIn 5s;
}
.social-icons a{
  margin-right:20px
}

@keyframes fadeIn {
  0% { opacity: 0; }
  100% { opacity: 1; }
}
.download-resume-btn{
  border: 2px solid #4dba87;
  background-color: transparent;
  color:#4dba87;
  width:150px;
  height:50px;
  cursor: pointer;
  margin-top: 40px;
  font-size: 25px;
  font-weight: 600;
  animation: fadeIn 5s;
  transition: all .3s ease-in-out;

}
.download-resume-btn:hover{
  transition: all .5s ease-in-out;
  background-color: #4dba87;
  color: #2D2E32;

}






.main-image{
  margin: 0;
  margin-right: 10%;
  display: inline-block;
  width: 40%;
  height: 90vh;

}
.main-image img{
  width:100%;
  height: 100%;
  opacity:.9;
  animation: fadeIn 5s;
  
}

.section:nth-child(2n+1){
  width: 100%;
  /* height: 500px; */
  /* background-color: #2D2E32; */
  background-color: #25262A;
  color: #4dba87;
  padding-left: 10vw;
  padding-top: 20px ;
  padding-bottom: 20px ;
  padding-top: 100px;
}
.section:nth-child(2n){
  width: 100%;
  text-align: right;
  height: auto;
  background-color: #2D2E32;
  background-color: #2D2E32;
  color: #4dba87;
  padding-right: 15vw;
  padding-top: 20px ;
  padding-bottom: 20px ;
  padding-top: 100px;

}
.about{
  margin-top: 30px;
  width:80%;
  /* text-align: justify; */
  color: #FFFFFF;

}





.skills-img-container{
  margin-top: 30px;
  width: 70%;
  height: auto;
  display:flex;
  flex-wrap:wrap;
  justify-content: space-around;
}

.projects{
  /* margin: auto; */
  width: 90%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  
  /* position: relative; */
}
.project-card{
  text-align: center;
  width:365px;
  height: 420px;
  margin-bottom: 20px;
  color:white;
  box-sizing: border-box;
  border-radius: 7px;
  /* border: 1px solid #4dba87; */
  margin-top: 30px;
  box-shadow: #4dba87 0px 5px 15px;
}
.project-card:hover{
  transform: scale(1.05);
  transition: all .3s ease-in-out;
}
.project-card-img{
  margin:0 auto;
  text-align: center;
  margin-top: 20px;
  width:350px;
  height: 200px;
  background-color: #4dba87;
  border-radius: 7px;
  position: relative;
  margin-bottom: 50px;
  /* transition: all .4s ease-in-out; */
  /* outline: auto; */
}
.project-card-img:hover{
  background-color: #25262A;
}
.project-card img{
  width: 100%;
  height: 100%;
  border-radius: 7px;
}




.project-live-github{
  padding-top: 10%;
  transition: all .5s ease-in-out;
 width: 100%;
 height: 100%;

 /* display: none; */
 position: absolute;
 top:0;
 left:0%;
 
 /* transform: translate(-50%, -50%); */
 /* background-color: #25262A; */
}
.project-live-github a {
 
  color: transparent;
}
.project-card-img:hover .project-live-github{
  
  border:1px solid #FFFFFF;
  background-color: #25262A;
  /* display: block; */
  /* transition: all .7 ease-in-out; */
}
.project-card-img:hover .project-live-github a {
  
  color: #4dba87;
  transition: all .7s ease-in-out;
}
.project-live-github a:hover {
  color: white;
}
.project-card-img:hover .project-live-github p {
  background-color: white;
  color: #4dba87;
  transition: all .7s ease-in-out;
}

.project-live-github p{
  
  margin-bottom: 50px;
  font-size: 18px;
  font-weight: bold;
}
.project-card-details{
  padding: 0 3px;
}
.project-card-details h3{
  margin-bottom: 10px;
}
/* .coming-soon{
color: yellow;
position: absolute;
top: 10px;
left:20px
} */


/* .footer-container{ */


  /* border: 2px solid orange; */
  /* width: 100%; */
  /* border-top: 5px orange; */
  /* border: 2px solid blue; */
  /* height: 100px; */
  /* outline: auto; */
/* } */
.footer-content-box{
  background-color: #4dba87;
  /* border: 2px solid orange; */
  width: 100%;
  /* height: 30px; */
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  margin: auto;
  padding-top: 20px;
  padding-left: 20px;
  padding-bottom: 20px;
  padding-right: 20px;
}


.copyrights{
  font-size: 20px;
}
/* .footer-social-icons{
margin-top: 10px;
} */
.footer-social-icons a{
  margin-right:20px;
  margin-top:10px;
}

.under-construction{
  color:red
}
.services{
  width: 90%;
  margin-left: 10vw;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  margin-top: 30px;
  width:80%;
}
.service-card{
  text-align: center;
  margin-bottom: 10px;
  width:300px;
  height: 300px;
  background-color: #25262A;
}









/* media query, responsive design */
@media screen and (max-width: 980px) {
  .main-image{
    display: none;

  }
  .header-left{
    /* margin: 0 auto; */
    /* width: fit-content; */
    /* padding-right:10px; */
    height:90vh;
    /* margin-left: 10%; */
    padding-top: 7vh;
    display: inline-block;
    /* margin-right: auto; */
    /* border:1px solid yellow; */
  
  }
  .projects{
    justify-content: center;
  }

  
}


@media screen and (max-width:760px) {
  .navbar-container > ul{
    display:none;
  }
  .navbar-container .hamberger img{
    display: inline-block;
    }
  .navbar-container .hamberger{
    float: right;
    margin-top: 15px;
    margin-right:20px;
    /* width: 400px; */
    /* height: 30px; */
    /* list-style: none; */
    
    
   
  }
  .hamberger-items-contaner{
    position: absolute;
    top:0;
    right: 0;
    width:50%;
    height: 250px;
    padding-top:20px ;
    background-color: #4dba87;
    animation: fadeIn .7s;
    /* border: 2px solid yellow */
    /* transition: all .3s ease-in-out; */

  }
  .hamberger-items-contaner img{
    width: 25px;
  }
  .hamberger-items-contaner ul li{
    /* border: 2px solid orange; */
    margin-bottom: 10px;
    /* text-align: right; */
    /* position: absolute; */
    /* top:0; */

    /* right: 0; */
    display: block;
  }
  .section:nth-child(2n+1){
    padding-left: 0px;
    text-align: center;
    width: 100%;
  }
  .section:nth-child(2n){
    padding-left: 0;
    text-align: center;
    /* text-align: left; */
    padding-right: 0;
    width: 100%;
    height: auto;
    background-color: #2D2E32;
    background-color: #2D2E32;
    color: #4dba87;
    /* padding-left: 10vw; */
    padding-top: 100px ;
    padding-bottom: 20px ;
  }
  .header-name{
    margin: 0%;
    font-weight: 400;
    font-size:  32px;
    color:#FFFFFF;
    white-space: nowrap;
    overflow: hidden;
    width: 100%;

  }
  .header-left{
    margin: 0 auto;
    width: fit-content;
    /* padding-right:10px; */
    height:90vh;
    /* margin-left: 10%; */
    padding-top: 7vh;
    display: inline-block;
    /* margin-right: auto; */
    /* border:1px solid yellow; */
  
  }

  .main-image{
    display: none;

  }
  .about{
    width:100%;
    height: fit-content;
    text-align: center;
    padding-bottom: 130px;
    padding: 0 15px;
    /* padding-right: 10%; */
  }

  .skills-img-container{
    width: 100%;
    padding-bottom:20px ;
    
  }
  .projects{
    width: 98%;
  }
  
  .project-card{
    width: 90%;
    height: auto;
  
  }
  .project-card-img{
    width: 96%;
  }

}

